# endless_runner_game

./: .gitignore  CMakeLists.txt  build.bat
code/: CMakeLists.txt  EndlessRunner.cpp  EndlessRunner.hpp  endless_runner.cpp
code/common/: Update.hpp
code/components/: CMakeLists.txt  Object.cpp  Object.hpp  components.hpp
code/renderer/: CMakeLists.txt  Renderer.cpp  Renderer.hpp  TextureUtility.cpp  TextureUtility.hpp
